# CR_Score

./: .cursorrule  .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  pyproject.toml  pytest.ini  requirements.txt  verify_installation.py
.github/workflows/: ci.yml
docs/: COMPRESSED_DATA_INTEGRATION.md  ENHANCED_FEATURES_SUMMARY.md  FEATURE_ENGINEERING.md  FINAL_IMPLEMENTATION_SUMMARY.md  README.md  SPARK_ALIGNMENT_REASSESSMENT.md  SPARK_ALL_TASKS_COMPLETE.md  SPARK_DEFAULT_IMPLEMENTATION_COMPLETE.md  SPARK_DEFAULT_IMPLEMENTATION_PLAN.md  SPARK_DEFAULT_IMPLEMENTATION_STATUS.md  SPARK_DOCUMENTATION_AND_TESTS_COMPLETE.md  SPARK_ENHANCEMENT_ASSESSMENT.md  TEMPORAL_VISUALIZATION_SUMMARY.md  VISUALIZATION_ENHANCEMENT_COMPLETE.md  requirements.txt
docs/rules/: AGENT_RULES.md  ARTIFACT_SPECIFICATION.md  CODING_STANDARDS.md  PERMISSIONS_MATRIX.md  SPARK_OPERATIONS_GUIDE.md  VALIDATION_GATES.md
docs/source/: conf.py  contributing.rst  index.rst  license.rst
docs/source/api/: binning.rst  calibration.rst  core.rst  data.rst  eda.rst  encoding.rst  explainability.rst  features.rst  model.rst  monitoring.rst  pipeline.rst  reporting.rst  scaling.rst  spark.rst  templates.rst  tools.rst  viz.rst
docs/source/examples/: complete_workflow.rst  custom_binning.rst  feature_selection_mlflow.rst  simple_scorecard.rst
docs/source/guides/: configuration.rst  enhanced_features.rst  explainability.rst  feature_selection.rst  installation.rst  mcp_tools.rst  observability.rst  quickstart.rst  reporting.rst  spark_optimization.rst  visualization.rst
examples/: complete_scorecard_workflow.py  compressed_data_training.py  feature_engineering_config.yml  feature_engineering_examples.py  feature_selection_with_mlflow.py  simple_3_line_scorecard.py
monitoring_data/: drift_history.jsonl  performance_history.jsonl
monitoring_data/alerts/: 7af89d5aff39.json  alert_history.jsonl
playbooks/: 01_quickstart.ipynb  02_feature_selection.ipynb  03_visualization_reporting.ipynb  04_complete_workflow.ipynb  05_advanced_topics.ipynb  06_model_families.ipynb  07_monitoring_observability.ipynb  08_enhanced_features.ipynb  09_temporal_visualization.ipynb  10_spark_default_feature_engineering.ipynb  README.md  create_all_notebooks.py  create_model_families_playbook.py  create_monitoring_playbook.py  create_notebooks.py  generate_notebooks.py  spark_helper.py
requirement/: URD_v1.2.txt  toolkit_urd.txt  visualization_urd.txt
src/cr_score/: __init__.py  pipeline.py
src/cr_score/binning/: __init__.py  coarse_classing.py  fine_classing.py  monotonic_merge.py  optbinning_wrapper.py
src/cr_score/calibration/: __init__.py  intercept.py
src/cr_score/cli/: __init__.py  main.py
src/cr_score/core/: exceptions.py
src/cr_score/eda/: __init__.py  bivariate.py  drift.py  univariate.py
src/cr_score/encoding/: __init__.py  woe.py
src/cr_score/evaluation/: __init__.py  calibration_metrics.py  classification_metrics.py  performance_evaluator.py  (+2 more)
tests/: README.md  conftest.py  integration_test_enhanced.py
tests/unit/: test_enhanced_features.py  test_evaluation.py  test_feature_engineering.py  test_feature_selection.py  test_models.py  test_monitoring.py  test_pipeline.py  test_reporting.py  test_spark_default.py  test_spark_metrics.py  test_spark_optimization.py  test_viz_temporal.py  test_woe_encoding.py
(+64 files in other folders)
